--- a/app/style.css
+++ b/app/style.css
@@ -1,16 +1,15 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 
 :root {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
-  line-height: 1.5;
+  font-family: 'Alegreya', serif;
   font-weight: 400;
-
+  line-height: 1.5;
+  
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #fff;
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,12 +18,19 @@
 }
 
 body {
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #000;
   margin: 0;
   display: flex;
   place-items: center;
   align-items: flex-start;
   min-width: 320px;
   min-height: 100vh;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 #app {
@@ -38,26 +44,21 @@ body {
   margin-top: 2em;
   padding: 2em;
   border-radius: 2em;
-  background: linear-gradient(180deg, #ff440066, transparent) no-repeat;
+  background: linear-gradient(180deg, #a32b0066, transparent) no-repeat;
   background-blend-mode: overlay;
 }
 
 /* typography */
 
 h1 {
-  font-family: 'Pacifico', script;
+  font-family: 'Alegreya', serif;
+  font-weight: 700;
+  font-style: italic;
   font-size: 3.2em;
   line-height: 1.1;
   margin-top: 0;
   opacity: 0.9;
 }
-
-.skill:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-
 
 /* layout */
 
@@ -65,56 +66,63 @@ h1 {
   display: flex;
   justify-content: center;
   margin: 4em 0;
+  transform-origin: center -50%;
 }
 
 .skill {
-  opacity: 0.8;
+  opacity: 0.5;
   width: 48px;
   margin: 0 18px;
-  transition: opacity 0.2s ease-in-out;
+  transition: all 0.2s ease;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  position: relative;
+
 }
 
-.skill:hover {
+.skill:hover, .skill:active {
   opacity: 1;
   cursor: pointer;
 }
+
+.svg-title {
+  transition: all 0.3s ease;
+  text-align: center;
+}
+
+.skill:hover .svg-title, .skill:active .svg-title {
+  transform: scale(1.2)
+}
+
+.message {
+  margin-top: 2em;
+  font-size: 1.2em;
+  display:none;
+}
+
 
 /* background */
 
 body {
   height: 100vh;
   margin: 0;
+  background: #fff;
   background-size: 200% 200%;
-  background-image: radial-gradient(#ff4500cc, transparent),
-                    radial-gradient(#4b0082cc, transparent),
-                    radial-gradient(#00ff00cc, transparent);
+  background-image: radial-gradient(#ff440076, transparent),
+                    radial-gradient(#4b008276, transparent),
+                    radial-gradient(#00ff0076, transparent);
   animation: move 20s infinite linear;
 }
 
-@keyframes move {
+@keyframes move1 {
   0% {
     background-position: 0% 0%, 0% 0%, 100% 100%;
   }
-  20% {
-    background-position: -30% 20%, 70% -50%, 40% -70%;
-  }
-  30% {
-    background-position: 0% -20%, 60% -20%, 60% -70%;
-  }
-  40% {
-    background-position: 0% 30%, 50% -10%, 80% -50%;
-  }
   50% {
     background-position: 100% -90%, -100% 90%, -40% 70%;
-  }
-  60% {
-    background-position: 80% -20%, -60% 20%, -60% -40%;
-  }
-  70% {
-    background-position: -70% 80%, 50% -40%, 40% -50%;
-  }
-  80% {
-    background-position: 30% 50%, 70% 0%, 60% 50%;
   }
   100% {
     background-position: 0% 0%, 0% 0%, 100% 100%;
@@ -124,12 +132,11 @@ body {
 /* page movement */
 
 @keyframes swing {
-  0% { transform: rotate(-5deg); }
-  50% { transform: rotate(5deg); }
-  100% { transform: rotate(-5deg); }
+  0%, 100% { transform: rotate(-3deg); }
+  20%, 80% { transform: rotate(3deg); }
+  50% { transform: rotate(0deg); }
 }
 
 .swing {
   animation: swing 2s infinite ease-in-out;
-  transform-origin: 0% 100%;
 }
