--- a/app/style.css
+++ b/app/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
@@ -7,7 +6,7 @@
   font-family: 'Alegreya', serif;
   font-weight: 400;
   line-height: 1.5;
-  
+
   color-scheme: light dark;
 
 
@@ -62,14 +61,14 @@ h1 {
 
 /* layout */
 
-.skills {
+.topics {
   display: flex;
   justify-content: center;
   margin: 4em 0;
   transform-origin: center -50%;
 }
 
-.skill {
+.topic {
   opacity: 0.5;
   width: 48px;
   margin: 0 18px;
@@ -83,7 +82,9 @@ h1 {
 
 }
 
-.skill:hover, .skill:active {
+.topic:hover,
+.topic:active,
+.hovered {
   opacity: 1;
   cursor: pointer;
 }
@@ -93,14 +94,15 @@ h1 {
   text-align: center;
 }
 
-.skill:hover .svg-title, .skill:active .svg-title {
+.topic:hover .svg-title,
+.topic:active .svg-title {
   transform: scale(1.2)
 }
 
 .message {
   margin-top: 2em;
   font-size: 1.2em;
-  display:none;
+  display: none;
 }
 
 
@@ -112,18 +114,20 @@ body {
   background: #fff;
   background-size: 200% 200%;
   background-image: radial-gradient(#ff440076, transparent),
-                    radial-gradient(#4b008276, transparent),
-                    radial-gradient(#00ff0076, transparent);
-  animation: move 20s infinite linear;
+    radial-gradient(#4b008276, transparent),
+    radial-gradient(#00ff0076, transparent);
+  animation: move 2s infinite linear;
 }
 
 @keyframes move1 {
   0% {
     background-position: 0% 0%, 0% 0%, 100% 100%;
   }
+
   50% {
     background-position: 100% -90%, -100% 90%, -40% 70%;
   }
+
   100% {
     background-position: 0% 0%, 0% 0%, 100% 100%;
   }
@@ -132,9 +136,20 @@ body {
 /* page movement */
 
 @keyframes swing {
-  0%, 100% { transform: rotate(-3deg); }
-  20%, 80% { transform: rotate(3deg); }
-  50% { transform: rotate(0deg); }
+
+  0%,
+  100% {
+    transform: rotate(-3deg);
+  }
+
+  20%,
+  80% {
+    transform: rotate(3deg);
+  }
+
+  50% {
+    transform: rotate(0deg);
+  }
 }
 
 .swing {
