--- a/app/style.css
+++ b/app/style.css
@@ -17,7 +17,6 @@ ul.tabs {
 }
 
 ul.tabs li {
-
   margin: 0 0.5rem;
 }
 
@@ -78,7 +77,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0);
-  transition: all 0.8s ease;
+  transition: all 0.8s ease-in-out;
   margin-top: 2rem;
   padding: 2rem;
 }
@@ -144,9 +143,6 @@ img::before {
   margin: 2rem 0;
   padding: 2rem;
   width: 320px;
-  height: 4.2rem;
-  border-radius: 0;
-  background: linear-gradient(180deg, #000000ff, #00000033, transparent) no-repeat;
 }
 
 .graphic {
@@ -157,7 +153,7 @@ img::before {
   align-items: center;
   justify-content: start;
   position: relative;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-in-out;
 }
 
 .graphic:hover,
@@ -167,7 +163,7 @@ img::before {
 }
 
 .title {
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-in-out;
   text-align: center;
 }
 
@@ -176,14 +172,9 @@ img::before {
   transform: scale(1.2)
 }
 
-.copy {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 20rem;
-  background: linear-gradient(180deg, #000000ff, #00000033, transparent) no-repeat;
-}
+
+
+.copy {}
 
 .message {
   margin-top: 2em;
@@ -221,7 +212,7 @@ footer {
 }
 
 .blurred {
-  filter: blur(10px);
+  filter: blur(60px);
   opacity: 0.8;
 }
 
