--- a/app/style.css
+++ b/app/style.css
@@ -9,48 +9,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-ul.tabs {
-  display: flex;
-  flex-direction: row;
-  list-style: none;
-  padding: 0;
-}
-
-ul.tabs li {
-  margin: 0 0.5rem;
-}
-
-.button a {
-  text-decoration: none;
-  position: relative;
-  padding: 10px;
-  display: inline-block;
-}
-
-.button a::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 0;
-  height: 2px;
-  background: #000;
-  transition: all 0.3s ease-in-out;
-}
-
-@media (prefers-color-scheme: dark) {
-  .button a::after {
-    background: #fff;
-    /* color for dark theme */
-  }
-}
-
-.button a:hover::after {
-  width: 100%;
-}
-
 .black {
   font-weight: 900;
 }
@@ -81,18 +39,8 @@ body {
   padding: 2rem;
 }
 
-
 .image {
   width: 100%;
-}
-
-.big.image {
-  width: 80%;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
 }
 
 .page {
@@ -120,25 +68,6 @@ h1 {
   letter-spacing: 0.09rem;
   line-height: 1.1;
   margin-top: 1rem 0;
-}
-
-.topics {
-  display: block;
-  justify-content: center;
-  margin: 4rem 0;
-}
-
-
-
-.topic {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  margin: 2rem 0;
-  padding: 2rem;
-  width: 320px;
 }
 
 .graphic {
@@ -218,6 +147,91 @@ footer {
 
 .transparent {
   opacity: 0;
+}
+
+/* tabs */
+
+ul.tabs {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  padding: 0;
+}
+
+ul.tabs li {
+  margin: 0 0.5rem;
+}
+
+.button a {
+  text-decoration: none;
+  position: relative;
+  padding: 10px;
+  display: inline-block;
+}
+
+.button a::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0;
+  height: 2px;
+  background: #000;
+  transition: all 0.3s ease-in-out;
+}
+
+@media (prefers-color-scheme: dark) {
+  .button a::after {
+    background: #fff;
+    /* color for dark theme */
+  }
+}
+
+.active.button a::after,
+.button a:hover::after {
+  width: 100%;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.subject {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s ease-out, visibility 1s ease-out;
+}
+
+.subject.subject-active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.topics {
+  display: block;
+  justify-content: center;
+  margin-bottom: 4rem;
+}
+
+.topic {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin: 2rem 0;
+  padding: 2rem;
+  width: 320px;
+  transition: all 0.3s ease-in-out;
+}
+
+.fade {
+  transition: opacity 1s ease-out, visibility 1s ease-out;
+  opacity: 0;
+  visibility: hidden;
 }
 
 /* fonts till end */
