--- a/app/style.css
+++ b/app/style.css
@@ -69,9 +69,13 @@ h1 {
   margin-top: 1rem 0;
 }
 
+p.header {
+  margin-top: 0;
+}
+
 .graphic {
   width: 6rem;
-  margin: 3rem 2rem;
+  margin: 0 2rem 2rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -134,6 +138,10 @@ footer {
 .blurred {
   filter: blur(60px);
   opacity: 0.8;
+}
+
+.big {
+  transform: scaleX(1.7) scaleY(1.7);
 }
 
 .left {
@@ -200,13 +208,11 @@ a {
 
 .subject {
   opacity: 0;
-  display: none;
-  transition: opacity 1s ease-out, visibility 1s ease-out;
+  transition: opacity 0.2s ease-in-out;
 }
 
 .subject.subject-active {
   opacity: 1;
-  display: block;
 }
 
 .topics {
