--- a/app/style.css
+++ b/app/style.css
@@ -215,10 +215,13 @@ a {
   opacity: 1;
 }
 
-.topics {
-  display: block;
-  justify-content: center;
-  margin-bottom: 4rem;
+.fade-in {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.subject-active.fade-in {
+  opacity: 1;
 }
 
 .topic {
