--- a/app/style.css
+++ b/app/style.css
@@ -128,6 +128,10 @@ footer {
   font-size: 1.2rem;
 }
 
+footer p {
+  margin: 3rem 0;
+}
+
 .animated {
   transition-property: all;
   transition-timing-function: ease-in-out;
@@ -194,8 +198,6 @@ ul.tabs li {
   display: inline-block;
 }
 
-
-
 .button a::after {
   content: '';
   position: absolute;
@@ -205,7 +207,7 @@ ul.tabs li {
   margin: auto;
   width: 0;
   height: 2px;
-  background: #000;
+  background: #fff;
   transition: all 0.2s ease-in-out;
 }
 
@@ -290,7 +292,7 @@ a {
     background: #fff;
   }
 
-  .active.button a::after,
+  .button.active a::after,
   .button a:hover::after {
     background: #000;
   }
