--- a/app/style.css
+++ b/app/style.css
@@ -10,10 +10,11 @@
 
 body {
   color: rgba(255, 255, 255);
-  background-color: #000;
+  background-color: #000000;
   min-width: 320px;
-  min-height: 100vh;
-  background-image: linear-gradient(to top, #000000, transparent);
+  min-height: 100%;
+  background-image: linear-gradient(to bottom, #300031, transparent);
+  background-attachment: fixed;
 }
 
 .modal-loader {
@@ -28,14 +29,14 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0);
+  background-color: #300031;
   transition: all 0.8s ease-in-out;
   margin-top: 2rem;
   padding: 2rem;
 }
 
 .image {
-  width: 100%;
+  width: 6rem;
 }
 
 .page {
@@ -53,7 +54,7 @@ body {
   width: 320px;
   padding: 2rem;
   border-radius: 0;
-  background: linear-gradient(180deg, #000000ff, #00000033, transparent) no-repeat;
+  background: linear-gradient(180deg, #300031ff, #30003133, transparent) no-repeat;
 }
 
 h1,
@@ -89,7 +90,7 @@ p.header {
   align-items: center;
   justify-content: start;
   position: relative;
-  /* transition: all 0.3s ease-in-out; */
+  /* transition: all 0.2s ease-in-out; */
 }
 
 .graphic:hover,
@@ -228,8 +229,19 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.z1 {
+  z-index: 1;
+}
+
+.z2 {
   z-index: 2;
-  transition: opacity 0.3s ease-in-out;
+}
+
+.z3 {
+  z-index: 3;
 }
 
 .hidden {
@@ -255,7 +267,6 @@ a {
   justify-content: center;
   position: relative;
   margin: 2rem 0;
-  padding: 2rem;
   width: 320px;
   transition: all 0.3s ease-in-out;
 }
@@ -284,12 +295,12 @@ a {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: rgba(0, 0, 0);
+    color: #300031;
     background-color: #fff;
   }
 
   body {
-    color: rgba(0, 0, 0);
+    color: #300031;
     background-color: #fff;
     background-image: linear-gradient(to top, #ffffff, transparent);
   }
@@ -308,18 +319,17 @@ a {
 
   .button.active a::after,
   .button a:hover::after {
-    background: #000;
+    background: #300031;
   }
 
   svg,
   path {
-    fill: #000;
+    fill: #300031;
   }
 }
 
 .tab-content.visible {
   opacity: 1;
-  z-index: 2;
 }
 
 .tab {
