--- a/app/style.css
+++ b/app/style.css
@@ -57,6 +57,10 @@ body {
   background: linear-gradient(180deg, #300031ff, #30003133, transparent) no-repeat;
 }
 
+.dim {
+  opacity: 0.8;
+}
+
 h1,
 h2,
 h3 {
@@ -234,14 +238,17 @@ a {
 
 .z1 {
   z-index: 1;
+  opacity: 0;
 }
 
 .z2 {
   z-index: 2;
+  opacity: 0;
 }
 
 .z3 {
   z-index: 3;
+  opacity: 0;
 }
 
 .hidden {
