--- a/app/style.css
+++ b/app/style.css
@@ -15,6 +15,7 @@ body {
   min-height: 100%;
   background-image: linear-gradient(to bottom, #300031, transparent);
   background-attachment: fixed;
+  margin-bottom: 10rem;
 }
 
 .image {
@@ -231,8 +232,11 @@ a {
   text-decoration: none;
 }
 
-.subject-wrapper {
+.relative {
   position: relative;
+}
+
+.subject-wrapper {
   width: 320px;
   margin: 0 1rem;
 }
@@ -241,13 +245,14 @@ a {
   opacity: 0;
   position: absolute;
   top: 0;
-  left: 0;
+  left: -9999;
   width: 100%;
   height: 100%;
   margin-bottom: 2rem !important;
   transition: opacity 0.2s ease-in-out;
 }
 
+/*
 .z1 {
   z-index: 1;
   opacity: 0;
@@ -262,8 +267,9 @@ a {
   z-index: 3;
   opacity: 0;
 }
-
-.subject.subject-active {
+*/
+.subject.active {
+  position: static;
   opacity: 1;
 }
 
@@ -317,10 +323,6 @@ a {
   .topic {
     transition: none;
   }
-}
-
-.tab-content.visible {
-  opacity: 1;
 }
 
 .tab {
