--- a/app/style.css
+++ b/app/style.css
@@ -1,6 +1,6 @@
 :root {
   font-family: 'Open Sans', sans-serif;
-  font-size: 125%;
+  font-size: 100%;
   font-weight: 400;
   line-height: 1.5;
   font-synthesis: none;
@@ -80,12 +80,12 @@ body * * * * * * * * * * * * * {
   justify-content: center;
 }
 
-.card {
+.header-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 18rem;
+  max-width: 31rem;
 }
 
 .portfolio-card {
@@ -93,14 +93,13 @@ body * * * * * * * * * * * * * {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: transform 0.5s;
-  width: 18rem;
+  max-width: 31rem;
 }
 
 .filters {
   display: none;
   margin: 1rem 0;
-  width: 18rem;
+  max-width: 31rem;
   text-align: center;
 }
 
@@ -109,8 +108,8 @@ body * * * * * * * * * * * * * {
   margin: 0.3rem 0.4rem;
 }
 
-/* The switch - the box around the slider */
-.switch {
+/* The checkbox-switch - the box around the checkbox-switch-slider */
+.checkbox-switch {
   position: relative;
   display: inline-block;
   font-size: 0.6rem;
@@ -120,41 +119,10 @@ body * * * * * * * * * * * * * {
 }
 
 /* Hide default HTML checkbox */
-.switch input {
+.checkbox-switch input {
   opacity: 0;
   width: 0;
   height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  width: 1rem;
-  height: 0.8rem;
-  cursor: pointer;
-  inset: 0;
-  background: #ffffff66;
-  border-radius: 50px;
-  overflow: hidden;
-  transition: all 0.4s ease-in-out;
-
-}
-
-.slider:after {
-  position: absolute;
-  content: "";
-  height: 0.6rem;
-  width: 0.6rem;
-  left: 0.1rem;
-  bottom: 0.1rem;
-  background-color: #cccccc;
-  border-radius: inherit;
-  transition: all 0.4s ease-in-out;
-}
-
-.switch input:checked + .slider::after {
-  transform: translateX(0.2rem);
-  background-color: #59d102;
 }
 
 h1,
@@ -163,26 +131,21 @@ h3,
 h4 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-}
-
-.work h3 {
-  margin-bottom: 0;
-}
-
-.work h4 {
-  margin-bottom: 3rem;
-}
-
-h4 {
-  font-size: 1.2rem;
-  margin: 0;
+  letter-spacing: 0.09rem;
 }
 
 h1 {
-  font-weight: 700;
   font-size: 2rem;
-  letter-spacing: 0.09rem;
   line-height: 1.1;
+}
+
+.title {
+  margin-bottom: 0;
+}
+
+.subtitle {
+  margin: 0 0 3rem 0;
+  font-size: 1rem;
 }
 
 p.header {
@@ -190,28 +153,35 @@ p.header {
   margin-bottom: 4rem;
 }
 
-.graphic {
-  width: 6rem;
-  margin: 0 2rem 5rem 2rem;
+/* header */
+
+.svg-wrapper {
+  margin: 0 2rem 4rem 2rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: start;
   position: relative;
   /* transition: all 0.2s ease-in-out; */
 }
 
-.small.graphic {
+.small.svg-wrapper {
   width: 1.5rem;
-  margin: 0 auto;
 }
 
-.section.graphic {
-  margin-bottom: 2rem;
+/* projects */
+
+.svg-wrapper {
+  width: 6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .screenshot {
-  width: 10rem;
+  width: 100%;
   height: auto;
   margin-bottom: 1rem;
 }
@@ -225,28 +195,36 @@ p.header {
   color: inherit;
 }
 
+.github svg {
+  width: 0.9rem;
 
-
-.text-link {
-  text-decoration: none;
-  font-weight: 700;
 }
 
-.text-link:hover {
-  text-decoration: underline;
+.summary-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 31rem;
+  margin: 0 1rem;
+  width: 70%;
 }
 
-.message {
-  margin-top: 2em;
-  font-size: 1.2em;
+.summary {
+  background-color: #ffffff44;
+  padding: 1rem;
+  border-radius: 0.2rem;
 }
+
+
+/* footer */
 
 footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 18rem;
+  max-width: 31rem;
   padding-bottom: 5rem;
   font-size: 0.9rem;
   text-align: center;
@@ -254,31 +232,6 @@ footer {
 
 footer p {
   margin: 3rem 0;
-}
-
-.animated {
-  transition-property: all;
-  transition-timing-function: ease-in-out;
-}
-
-.delayed02 {
-  transition-delay: 0.2s;
-}
-
-.dur02 {
-  transition-duration: 0.2s;
-}
-
-.dur04 {
-  transition-duration: 0.4s;
-}
-
-.dur06 {
-  transition-duration: 0.6s;
-}
-
-.dur08 {
-  transition-duration: 0.8s;
 }
 
 .blurred {
@@ -310,7 +263,7 @@ ul.tabs {
   justify-content: center;
   align-items: center;
   list-style: none;
-  width: 18rem;
+  max-width: 31rem;
   padding: 0;
 }
 
@@ -354,14 +307,14 @@ a {
 
 .subject-wrapper {
   position: relative;
-  width: 18rem;
+  max-width: 31rem;
   margin: 0 1rem;
 }
 
 .subject {
   display: none;
   opacity: 0;
-  width: 18rem;
+  max-width: 31rem;
   height: 100%;
   transition: opacity 0.9 s ease-in-out;
 
@@ -380,107 +333,49 @@ a {
   justify-content: center;
   position: relative;
   margin: 2rem 0;
-  width: 18rem;
+  max-width: 31rem;
   background-color: #ffffff11;
   margin: 0 -0.5rem;
   padding: 3rem 0.5rem 0.5rem 0.5rem;
   border-radius: 0.2rem;
 }
 
-.work .topic {
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  margin-bottom: 4rem;
-}
 
-h4 {
-  margin-top: 0;
-  font-size: 1rem;
-}
 
-/* lists */
+/* buttons */
 
-/* Reset default list styles */
-ul,
-li {
-  margin: 0;
-  padding: 0;
-}
 
-ul {
-  margin-block-end: 1rem;
-}
-
-ul ul.inner-list {
-  margin-block-start: 0.5rem;
-}
-
-.list-item {
-  font-size: 0.8rem;
-  font-weight: initial;
-  padding: 0 0 0.2rem 0.5rem;
-  list-style-type: square;
-  list-style-position: inside;
-  margin-bottom: 0.1rem;
-  border-bottom: 0.1rem solid #eeeeee11;
-}
-
-.list-item::before {
-  content: '';
+/* Checkbox switch  */
+.checkbox-switch-slider {
   position: absolute;
-  left: 0;
+  width: 1rem;
+  height: 0.8rem;
+  cursor: pointer;
+  inset: 0;
+  background: #ffffff66;
+  border-radius: 50px;
+  overflow: hidden;
+  transition: all 0.4s ease-in-out;
+
 }
 
-.list-item.dim {
-  color: #eeeeee66;
+.checkbox-switch-slider:after {
+  position: absolute;
+  content: "";
+  height: 0.6rem;
+  width: 0.6rem;
+  left: 0.1rem;
+  bottom: 0.1rem;
+  background-color: #cccccc;
+  border-radius: inherit;
+  transition: all 0.4s ease-in-out;
 }
 
-li.list-item-heading {
-  font-weight: 700;
-  list-style-type: none;
+.checkbox-switch input:checked + .checkbox-switch-slider::after {
+  transform: translateX(0.2rem);
+  background-color: #59d102;
 }
 
-.list-item:last-child {
-  border-bottom: none;
-}
-
-@media (prefers-color-scheme: light) {
-
-  body {
-    color: #300031;
-    background-color: #eeeeee;
-    background-image: linear-gradient(to top, #fcccca, transparent);
-  }
-
-  .button a::after {
-    background: #eeeeee;
-  }
-
-  .button.active a::after,
-  .button a:hover::after {
-    background: #300031;
-  }
-
-  svg,
-  path {
-    fill: #300031;
-  }
-}
-
-@media (prefers-reduced-motion: reduce) {
-  .graphic {
-    transition: none;
-  }
-
-  .button a::after {
-    transition: none;
-  }
-
-  .topic {
-    transition: none;
-  }
-}
 
 .tab {
   cursor: pointer;
@@ -521,4 +416,50 @@ li.list-item-heading {
 
 .mail:hover {
   text-decoration: underline;
+}
+
+/* lists */
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  margin-block-end: 1rem;
+  width: 100%;
+}
+
+ul ul.inner-list {
+  margin-block-start: 0.5rem;
+}
+
+.list-item {
+  font-size: 0.8rem;
+  font-weight: initial;
+  padding: 0 0 0.2rem 0.5rem;
+  list-style-type: square;
+  list-style-position: inside;
+  margin-bottom: 0.1rem;
+  border-bottom: 0.1rem solid #eeeeee11;
+}
+
+.list-item::before {
+  content: '';
+  position: absolute;
+  left: 0;
+}
+
+.list-item.dim {
+  color: #eeeeee66;
+}
+
+li.list-item-heading {
+  font-weight: 700;
+  list-style-type: none;
+}
+
+.list-item:last-child {
+  border-bottom: none;
 }
